# Lab_OOP_1

./: README.md
lab1/: CMakeLists.txt  Doxyfile  README.md  main.cpp
lab1/src/: lib.cpp  lib.hpp  prog.cpp  prog.hpp
lab1/test/: CMakeLists.txt  test.cpp
